--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -3,19 +3,87 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -23,46 +91,98 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
 	display: block;
 }
+
 body {
 	line-height: 1;
+	background-color: #FFFEF8;
 }
-ol, ul {
+
+ol,
+ul {
 	list-style: none;
 }
-blockquote, q {
+
+blockquote,
+q {
 	quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
 	content: '';
 	content: none;
 }
+
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
 /** end reset css**/
 body {
-	max-width: 1140px;
-	margin:auto;
-	font-family: 'Work Sans' ;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	max-width: 100%;
+	margin: 0;
+	font-family: 'Work Sans';
 	font-size: 14px;
 }
+
 header {
 	display: flex;
 	justify-content: space-between;
-	margin: 50px 0
-}
-section {
-	margin: 50px 0
+	margin: 50px 0 0 0;
+	max-width: 1140px;
+	width: 100%;
 }
 
-h1{
+header img {
+	height: 22px;
+	width: 22px;
+}
+
+.index-links {
+	text-decoration: none;
+	color: black;
+}
+
+.a-selected {
+	font-weight: 700;
+	cursor: default;
+}
+
+main {
+	max-width: 1140px;
+	width: 100%;
+}
+
+section {
+	margin: 139px 0 57px 0;
+	max-width: 1140px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+h1 {
+	text-decoration: none;
 	display: flex;
 	flex-direction: column;
 	font-family: 'Syne';
@@ -71,49 +191,69 @@ h1{
 	color: #B1663C
 }
 
-h1 > span {
+h1>span {
 	font-family: 'Work Sans';
-	font-size:10px;
+	font-size: 10px;
 	letter-spacing: 0.1em;
-;
+	;
 }
 
-h2{
+h1 a {
+	text-decoration: none;
+	display: flex;
+	flex-direction: column;
+	font-family: 'Syne';
+	font-size: 22px;
+	font-weight: 800;
+	color: #B1663C
+}
+
+h2 {
 	font-family: 'Syne';
 	font-weight: 700;
 	font-size: 30px;
 	color: #1D6154
 }
+
 nav ul {
 	display: flex;
 	align-items: center;
 	list-style-type: none;
-
+	gap: 44px;
 }
+
 nav li {
 	padding: 0 10px;
 	font-size: 1.2em;
+
 }
 
-li:hover {
-	color: #B1663C;
+header li:hover {
+	font-weight: 700;
+	cursor: pointer;
 }
+
 #introduction {
 	display: flex;
 	align-items: center;
+	max-width: 1140px;
+	gap: 72px;
 }
+
 #introduction figure {
 	flex: 1
 }
+
 #introduction img {
 	display: block;
 	margin: auto;
-	width: 80%;
+	width: 100%;
 }
 
 #introduction article {
-	flex: 1
+	flex: 1;
 }
+
 #introduction h2 {
 	margin-bottom: 1em;
 }
@@ -121,36 +261,83 @@ li:hover {
 #introduction p {
 	margin-bottom: 0.5em;
 }
+
 #portfolio h2 {
 	text-align: center;
-	margin-bottom: 1em;
 }
+
+.allCategory {
+	display: flex;
+	justify-content: center;
+	margin: 51px 0 50px 0;
+	gap: 10px;
+}
+
+.allCategory button {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-family: 'Syne';
+	font-weight: 700;
+	font-size: 16px;
+	text-align: center;
+	color: #1D6154;
+	border: #1D6154 1px solid;
+	background-color: white;
+	padding: 9px 15px;
+	border-radius: 60px;
+	min-width: 100px;
+	max-width: 198px;
+	text-wrap: nowrap;
+}
+
+.allCategory button:hover {
+	background-color: #1D6154;
+	color: white;
+	cursor: pointer;
+}
+
+.allCategory button.activeButton {
+	background-color: #1D6154;
+	color: white;
+}
+
+
 .gallery {
 	width: 100%;
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
-	grid-column-gap: 20px;
-	grid-row-gap: 20px;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 20px;
 }
 
 .gallery img {
 	width: 100%;
+	aspect-ratio: 3 / 4;
+	object-fit: cover;
+	display: block;
+}
 
+.gallery figcaption {
+	margin-top: 7px;
 }
+
 #contact {
-	width: 50%;
-margin: auto;
+	width: 380px;
+	margin: auto;
 }
-#contact > * {
+
+#contact>* {
 	text-align: center;
 
 }
-#contact h2{
+
+#contact h2 {
 	margin-bottom: 20px;
 }
+
 #contact form {
 	text-align: left;
-	margin-top:30px;
+	margin-top: 30px;
 	display: flex;
 	flex-direction: column;
 }
@@ -161,28 +348,317 @@ margin: auto;
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
+
 #contact label {
 	margin: 2em 0 1em 0;
 }
+
 #contact textarea {
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
 
-input[type="submit"]{
+input[type="submit"] {
 	font-family: 'Syne';
 	font-weight: 700;
 	color: white;
 	background-color: #1D6154;
-	margin : 2em auto ;
+	margin: 2em auto;
 	width: 180px;
 	text-align: center;
-	border-radius: 60px ;
+	border-radius: 60px;
 }
 
-footer nav ul {
+input[type="submit"]:hover {
+	cursor: pointer;
+	background-color: #0E2F28;
+}
+
+input {
+	padding: 0 10px;
+}
+
+textarea {
+	padding: 10px;
+}
+
+footer {
+	background-color: white;
+	height: 60px;
 	display: flex;
 	justify-content: flex-end;
-	margin: 2em
+	align-items: center;
+	width: 100%;
 }
 
+footer nav ul li {
+	padding-right: 107px;
+	font-weight: 300;
+}
+
+.login-main {
+	height: 964px;
+	margin-top: 150px;
+}
+
+.login-forgetmdp a {
+	display: flex;
+	justify-content: center;
+	color: black;
+}
+
+.login-problem {
+	display: flex;
+	justify-content: center;
+	font-size: 16px;
+	color: #B1663C;
+}
+
+.bar-edit {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	height: 69px;
+	background-color: #000000;
+	color: #FFFFFF;
+	text-align: center;
+	position: sticky;
+	z-index: 1000;
+	top: 0;
+	font-size: 16px;
+}
+
+.modify-section {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 30px;
+	font-size: 14px;
+}
+
+.modify {
+	cursor: pointer;
+}
+
+.modal {
+	background-color: #ffffff;
+	position: absolute;
+	z-index: 900;
+	margin-top: 600px;
+	border-radius: 10px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 630px;
+}
+
+.overlay {
+	position: fixed;
+	left: 0;
+	width: 100%;
+	height: 100vh;
+	background-color: rgba(0, 0, 0, 0.3);
+	z-index: 800;
+}
+
+.modal-gallery {
+	display: grid;
+	grid-template-columns: repeat(5, 1fr);
+	gap: 29px 9px;
+	margin: 0 105px;
+	padding: 46px 0 67px 0;
+}
+
+.modal-gallery figure {
+	width: 76px;
+	height: 102px;
+	overflow: hidden;
+}
+
+.modal-gallery img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	display: block;
+}
+
+.modal-title {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: 26px;
+	margin-top: 10px;
+	gap: 10px;
+}
+
+.add-button {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-family: 'Syne';
+	font-weight: 700;
+	font-size: 14px;
+	text-align: center;
+	color: #ffffff;
+	border: #1D6154 1px solid;
+	background-color: #1D6154;
+	padding: 9px 15px;
+	border-radius: 60px;
+	width: 237px;
+	text-wrap: nowrap;
+}
+
+.add-button:hover {
+	background-color: #0E2F28;
+	cursor: pointer;
+}
+
+.modal-header {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 10px;
+	width: 100%;
+}
+
+.modal-top-icons {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 25px 30px 0 30px;
+	gap: 525px;
+}
+
+.back-arrow,
+.close {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 24px;
+	width: 24px;
+	cursor: pointer;
+}
+
+.case-add {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	width: 420px;
+	height: 169px;
+	background-color: #E8F1F6;
+	border-radius: 3px;
+	align-items: center;
+	margin: 36px 0 30px 0;
+	gap: 6px;
+	overflow: hidden;
+}
+
+.case-add span {
+	font-size: 10px;
+}
+
+.ajouter-photo {
+	font-weight: 500;
+	font-size: 14px;
+	text-align: center;
+	color: #306685;
+	background-color: #CBD6DC;
+	padding: 9px 15px;
+	border-radius: 60px;
+	width: 173px;
+	border: #CBD6DC 1px solid;
+	cursor: pointer;
+}
+
+.img-icon {
+	color: #B9C5CC;
+	font-size: 76px;
+}
+
+.form-add {
+	display: flex;
+	flex-direction: column;
+	width: 420px;
+	gap: 10px;
+	border-bottom: 1px solid #B3B3B3;
+}
+
+.form-add input {
+	height: 50px;
+	font-size: 1.2em;
+	border: none;
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+	margin-bottom: 10px;
+}
+
+.form-add select {
+	height: 50px;
+	font-size: 1.2em;
+	border: none;
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+	border-bottom: 1px solid #b3b3b3;
+	margin-bottom: 47px;
+}
+
+.form-footer {
+	border-top: 1px solid #b3b3b3;
+	padding: 32px 0 55px 0;
+	display: flex;
+	justify-content: center;
+	width: 420px;
+}
+
+.button-validate {
+	font-family: 'Syne';
+	font-weight: 700;
+	font-size: 14px;
+	text-align: center;
+	color: #ffffff;
+	border: #1D6154 1px solid;
+	background-color: #1D6154;
+	padding: 9px 15px;
+	border-radius: 60px;
+	width: 237px;
+}
+
+.button-validate:hover {
+	background-color: #0E2F28;
+	cursor: pointer;
+}
+
+.modal-gallery figure {
+	position: relative;
+}
+
+.delete-icon {
+	background-color: #000000;
+	color: #FFFFFF;
+	font-size: 10px;
+	padding: 3px;
+	border-radius: 2px;
+	position: absolute;
+	cursor: pointer;
+	z-index: 10;
+	top: 5px;
+	right: 5px;
+}
+
+#preview {
+	width: 129px;
+}
+
+.image-problem {
+	display: flex;
+	justify-content: center;
+	font-size: 16px;
+	color: #B1663C;
+}
+
+.empty-problem {
+	display: flex;
+	justify-content: center;
+	font-size: 16px;
+	color: #B1663C;
+}
