--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -435,6 +435,7 @@ footer nav ul li {
 	justify-content: center;
 	gap: 30px;
 	font-size: 14px;
+	margin-bottom: 92px;
 }
 
 .modify {
@@ -521,6 +522,7 @@ footer nav ul li {
 	align-items: center;
 	gap: 10px;
 	width: 100%;
+	margin: 0;
 }
 
 .modal-top-icons {
@@ -590,7 +592,7 @@ footer nav ul li {
 	flex-direction: column;
 	width: 420px;
 	gap: 10px;
-	border-bottom: 1px solid #B3B3B3;
+	border-bottom: #B3B3B3;
 }
 
 .form-add input {
@@ -604,11 +606,27 @@ footer nav ul li {
 .form-add select {
 	height: 50px;
 	font-size: 1.2em;
+	padding: 0 10px;
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
-	border-bottom: 1px solid #b3b3b3;
+	border-bottom: #b3b3b3;
 	margin-bottom: 47px;
+	appearance: none;
+	width: 100%;
 }
+
+.select-wrapper {
+	position: relative;
+}
+
+.select-wrapper i {
+	position: absolute;
+	top: 20px;
+	right: 29px;
+	color: #6c6c6c;
+	pointer-events: none;
+}
+
 
 .form-footer {
 	border-top: 1px solid #b3b3b3;
